# empathy

./: .gitignore  .gitmodules  GOSSIP-RELICENSING.txt  Makefile.am  NEWS  autogen.sh  configure.ac  empathy.doap  release.py
data/: .gitignore  Empathy.Auth.client  Empathy.Call.client  Empathy.Chat.client  Empathy.FileTransfer.client  Makefile.am  element-properties  empathy.appdata.xml  empathy.css  empathy.desktop.in.in  im.telepathy.v1.Client.Empathy.Auth.service.in  im.telepathy.v1.Client.Empathy.Call.service.in  im.telepathy.v1.Client.Empathy.Chat.service.in  im.telepathy.v1.Client.Empathy.FileTransfer.service.in  im.telepathy1.Client.Empathy.Auth.service.in  im.telepathy1.Client.Empathy.Call.service.in  im.telepathy1.Client.Empathy.Chat.service.in  im.telepathy1.Client.Empathy.FileTransfer.service.in  org.gnome.Empathy.gschema.xml.in  skype-eula.txt
data/icons/: Makefile.am
data/themes/Boxes.AdiumMessageStyle/Contents/Resources/Incoming/: Content.html  NextContent.html
data/themes/Classic.AdiumMessageStyle/Contents/Resources/: Content.html  main.css
data/themes/PlanetGNOME.AdiumMessageStyle/Contents/Resources/: main.css
data/themes/PlanetGNOME.AdiumMessageStyle/Contents/Resources/Incoming/: Content.html  NextContent.html
debian/: README.source  changelog  control  empathy-common.install  empathy.install  gbp.conf  rules  watch
extensions/: Channel_Interface_Credentials_Storage.xml  Connection_Interface_Privacy_Settings.xml  Logger.xml  Makefile.am  extensions-cli.c  extensions.h  generic-types.xml  misc.xml
gnome-2-22/: NEWS  configure.ac
goa-mc-plugin/: mcp-account-manager-goa.c  mission-control-plugin.c
help/: .gitignore  Makefile.am
libempathy/: .gitignore  Makefile.am  action-chain-internal.h  cheese-camera-device-monitor.c  cheese-camera-device-monitor.h  empathy-account-settings.c  empathy-account-settings.h  empathy-auth-factory.c  empathy-auth-factory.h  empathy-camera-monitor.c  empathy-channel-factory.c  empathy-chatroom-manager.c  empathy-chatroom-manager.h  empathy-chatroom.c  empathy-chatroom.h  empathy-client-factory.c  empathy-connection-aggregator.c  empathy-connection-aggregator.h  empathy-connection-managers.c  empathy-connection-managers.h  empathy-contact-groups.c  empathy-contact.c  empathy-contact.h  empathy-debug.c  empathy-debug.h  empathy-dispatcher.c  empathy-dispatcher.h  empathy-dtd.gresource.xml  empathy-ft-factory.c  empathy-ft-handler.c  empathy-ft-handler.h  empathy-goa-auth-handler.c  empathy-gsettings.h  empathy-handler.c  empathy-idle.c  empathy-individual-manager.c  empathy-individual-manager.h  empathy-irc-network-manager.c  empathy-irc-network.c  empathy-irc-server.c  (+25 more)
libempathy-gtk/: .gitignore  Makefile.am  empathy-account-chooser.c  empathy-account-chooser.h  empathy-account-widget-irc.c  empathy-account-widget-irc.h  empathy-account-widget-jabber.ui  empathy-account-widget-private.h  empathy-account-widget-sip.c  empathy-account-widget-sip.h  empathy-account-widget-sip.ui  empathy-account-widget-skype.c  empathy-account-widget-skype.h  empathy-account-widget-skype.ui  empathy-account-widget.c  empathy-account-widget.h  empathy-account-widgets.gresource.xml  empathy-avatar-chooser.c  empathy-avatar-chooser.h  empathy-avatar-image.c  empathy-avatar-image.h  empathy-bad-password-dialog.c  empathy-bad-password-dialog.h  empathy-base-password-dialog.c  empathy-base-password-dialog.h  empathy-calendar-button.c  empathy-calendar-button.h  empathy-call-utils.c  empathy-call-utils.h  empathy-cell-renderer-activatable.c  empathy-cell-renderer-expander.c  empathy-cell-renderer-text.c  empathy-chat-text-view.c  empathy-chat-view.c  empathy-chat-view.h  empathy-chat.c  empathy-chat.h  empathy-conf.h  empathy-contact-blocking-dialog.c  empathy-contact-blocking-dialog.ui  (+97 more)
nautilus-sendto-plugin/: Makefile.am  empathy-nautilus-sendto.c
po/: ChangeLog  LINGUAS  POTFILES.in  POTFILES.skip  an.po  ar.po  as.po  ast.po  be.po  bg.po  bn_IN.po  ca.po  ca@valencia.po  crh.po  cs.po  da.po  de.po  el.po  en_GB.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  ga.po  gl.po  gu.po  he.po  hi.po  hu.po  id.po  it.po  ja.po  kn.po  ko.po  la.po  lt.po  lv.po  mai.po  (+27 more)
src/: .gitignore  Makefile.am  empathy-about-dialog.c  empathy-account-assistant.c  empathy-accounts-common.c  empathy-accounts-common.h  empathy-accounts-dialog.c  empathy-accounts-dialog.h  (+65 more)
tp-account-widgets/: .gitignore  Makefile.am  cheese-camera-device-monitor.c  empathy-account-widget-irc.c  empathy-account-widget-irc.h  empathy-account-widget-private.h  empathy-account-widget-sip.c  empathy-account-widget-sip.h  empathy-account-widget.c  empathy-account-widget.h  empathy-account-widgets.gresource.xml  empathy-irc-network-chooser-dialog.c  empathy-irc-network-chooser-dialog.h  empathy-irc-network-chooser.c  empathy-irc-network-chooser.h  empathy-irc-network-dialog.c  empathy-irc-network-dialog.h  empathy-irc-network-manager.c  empathy-irc-network-manager.h  empathy-irc-network.c  empathy-irc-network.h  empathy-irc-server.c  totem-subtitle-encoding.c  tpaw-account-settings.c  tpaw-account-settings.h  tpaw-account-widget-irc.c  tpaw-account-widget-private.h  tpaw-account-widget-sip.c  tpaw-account-widget.c  tpaw-account-widget.h  tpaw-avatar-chooser.c  tpaw-avatar-chooser.h  tpaw-builder.c  tpaw-builder.h  tpaw-calendar-button.c  tpaw-camera-monitor.c  tpaw-connection-managers.c  tpaw-connection-managers.h  tpaw-contactinfo-utils.c  tpaw-debug.c  (+25 more)
ubuntu-online-accounts/cc-plugins/account-plugins/: Makefile.am  empathy-accounts-plugin-aim.c  empathy-accounts-plugin-aim.h  empathy-accounts-plugin-gadugadu.c  empathy-accounts-plugin-gadugadu.h  empathy-accounts-plugin-groupwise.h  empathy-accounts-plugin-irc.c  empathy-accounts-plugin-irc.h  empathy-accounts-plugin-jabber.h  empathy-accounts-plugin-local-xmpp.h  empathy-accounts-plugin-myspace.c  empathy-accounts-plugin-myspace.h  empathy-accounts-plugin-widget.c  empathy-accounts-plugin-yahoo.h  empathy-accounts-plugin-zephyr.c  empathy-accounts-plugin-zephyr.h  empathy-accounts-plugin.c  empathy-accounts-plugin.h
(+101 files in other folders)
